# DownMan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
branding/: prep_icon.py
docs/: ARCHITECTURE.md
docs/adr/: 0000-template.md  0001-desktop-shell-tauri.md  0002-download-engine-aria2.md  0003-frontend-stack.md  0004-browser-bridge.md  0005-smart-media-capture.md  0006-file-organization.md  0007-hls-dash-ffmpeg.md  0008-release-build-profile.md  0009-packaging.md  0010-multi-engine-media-capture.md  0011-light-dark-theming.md  0012-iconography-wayland.md  0013-host-agnostic-media-resolver.md  0014-sqlite-policy-state.md  0015-backend-bounded-automation.md  README.md
docs/screenshots/: README.md
extensions/: .amo-upload-uuid  background.js  content.js  manifest.json  media-resolver.js  mse-probe.js  options.html  options.js  popup.html  popup.js
release/v1.0.0/: RELEASE_NOTES.md  SHA256SUMS.txt
scripts/: build_extension.sh  checksums.sh  prepare_binaries.sh  sign_extension.sh
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  downman.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  aria2.rs  collections.rs  lib.rs  main.rs  media_policy.rs  preflight.rs  profiles.rs  scheduler.rs  search.rs  state_db.rs  subscriptions.rs
src/lib/: api.ts  (+5 more)
tests/: background-resolver.test.mjs  media-overlay.fixture.html  media-resolver.test.mjs  mse-probe.test.mjs
(+27 files in other folders)
