[package]
name = "downman"
version = "0.1.2"
description = "DownMan — a modern aria2-powered download manager"
authors = ["Himanshu Rai"]
license = "MIT"
repository = "https://github.com/rai-himanshu07/DownMan"
edition = "2021"

[lib]
name = "downman_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
dirs = "5"
anyhow = "1"
once_cell = "1"
tiny_http = "0.12"
regex = "1"
arboard = "3"

[profile.release]
opt-level = 2
codegen-units = 16
lto = false
strip = true
incremental = true
